--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=crud_laravel
-DB_USERNAME=usermath
-DB_PASSWORD=User001!
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=crud_laravel
+# DB_USERNAME=usermath
+# DB_PASSWORD=User001!
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
